--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body {
   font-size: 1.875rem;
   font-weight: bold;
   text-align: center;
-  color: #1f2937;
   margin-bottom: 3rem;
 }
 .converter-layout {
@@ -115,7 +114,7 @@ body {
 }
 .upload-button {
   padding: 0.5rem 1rem;
-  background-color: #0891b2;
+  background-color: #00c895;
   color: white;
   border: none;
   border-radius: 0.5rem;
@@ -123,7 +122,7 @@ body {
   transition: background-color 0.2s;
 }
 .upload-button:hover {
-  background-color: #0e7490;
+  background-color: #019a74;
 }
 .file-info {
   text-align: center;
